// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterInputField renders correctly with an error state 1`] = `
Array [
  <div>
    <label
      htmlFor="testInput"
    >
      testLabel
    </label>
    <input
      className="error"
      id="testInput"
      name="test"
      onChange={[Function]}
      type="text"
    />
  </div>,
  <p
    className="input-error error css-19r9y0d-NewsletterInputField"
  >
    ERROR!
  </p>,
]
`;

exports[`NewsletterInputField renders correctly with no error state 1`] = `
Array [
  <div>
    <label
      htmlFor="testInput"
    >
      testLabel
    </label>
    <input
      className=""
      id="testInput"
      name="test"
      onChange={[Function]}
      type="text"
    />
  </div>,
  <p
    className="input-error  css-19r9y0d-NewsletterInputField"
  >
    ERROR!
  </p>,
]
`;
